; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_datacache.c_write_clipformat.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_datacache.c_write_clipformat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @write_clipformat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_clipformat(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca [256 x i8], align 16
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %28

13:                                               ; preds = %2
  %14 = load i64, i64* %5, align 8
  %15 = icmp slt i64 %14, 49152
  br i1 %15, label %16, label %17

16:                                               ; preds = %13
  store i32 -1, i32* %6, align 4
  br label %27

17:                                               ; preds = %13
  %18 = load i64, i64* %5, align 8
  %19 = getelementptr inbounds [256 x i8], [256 x i8]* %8, i64 0, i64 0
  %20 = call i32 @GetClipboardFormatNameA(i64 %18, i8* %19, i32 256)
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %17
  %24 = load i32, i32* %6, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %6, align 4
  br label %26

26:                                               ; preds = %23, %17
  br label %27

27:                                               ; preds = %26, %16
  br label %28

28:                                               ; preds = %27, %12
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 (i32*, ...) @IStream_Write(i32* %29, i32* %6, i64 4, i8* null)
  store i32 %30, i32* %7, align 4
  %31 = load i32, i32* %7, align 4
  %32 = call i64 @FAILED(i32 %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %37, label %34

34:                                               ; preds = %28
  %35 = load i64, i64* %5, align 8
  %36 = icmp eq i64 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %34, %28
  %38 = load i32, i32* %7, align 4
  store i32 %38, i32* %3, align 4
  br label %54

39:                                               ; preds = %34
  %40 = load i64, i64* %5, align 8
  %41 = icmp slt i64 %40, 49152
  br i1 %41, label %42, label %47

42:                                               ; preds = %39
  %43 = load i64, i64* %5, align 8
  %44 = trunc i64 %43 to i32
  store i32 %44, i32* %9, align 4
  %45 = load i32*, i32** %4, align 8
  %46 = call i32 (i32*, ...) @IStream_Write(i32* %45, i32* %9, i64 4, i8* null)
  store i32 %46, i32* %7, align 4
  br label %52

47:                                               ; preds = %39
  %48 = load i32*, i32** %4, align 8
  %49 = getelementptr inbounds [256 x i8], [256 x i8]* %8, i64 0, i64 0
  %50 = load i32, i32* %6, align 4
  %51 = call i32 (i32*, ...) @IStream_Write(i32* %48, i8* %49, i32 %50, i8* null)
  store i32 %51, i32* %7, align 4
  br label %52

52:                                               ; preds = %47, %42
  %53 = load i32, i32* %7, align 4
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %52, %37
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local i32 @GetClipboardFormatNameA(i64, i8*, i32) #1

declare dso_local i32 @IStream_Write(i32*, ...) #1

declare dso_local i64 @FAILED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
